# iitm-cgpa

./: .dockerignore  .env.demo  .gitignore  Dockerfile  Makefile  README.md  app.py  config.py  course-fetcher.py  degree.csv  diploma.csv  docker-compose.yml  foundation.csv  iitm-courses.json  models.py  pyproject.toml  requirements.txt  routes.py  run.sh
migrations/versions/: e74b8a048cb2_.py
scripts/: build.sh  deploy.sh  drop_db.sh
templates/: about.html  cgpa.html  courses.html  disclaimer.html  donate.html  footer.html  help.html  index.html  level.html  navbar.html  parent.html
