[project]
name = "iitm-cgpa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "flask>=3.1.3",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "lxml>=6.1.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
]
